# otus-main-patterns

./: CMakeLists.txt  gitignore.txt
.github/workflows/: build.yml
IoC/: CMakeLists.txt  IoC.cpp  IoC.hpp
commands/: CMakeLists.txt  commands-tests.cpp  commands.hpp  handler-tests.cpp  handler.cpp  handler.hpp
commands/adapters/: CMakeLists.txt  change-velocity-comamnd.hpp  movable-adapter.hpp  rotable-adapter.hpp  tests.cpp  uobject.hpp
commands/fuel-commands/: CMakeLists.txt  fuel-commands-tests.cpp  fuel-commands.hpp  fuel-manager-interface.hpp  mock-fuel.hpp
commands/handler/: CMakeLists.txt  handler-tests.cpp  handler.cpp  handler.hpp
commands/macro-commands/: CMakeLists.txt  command-exeption.hpp  macro-command.hpp  macro-commands-tests.cpp  macro-move.hpp
commands/move/: CMakeLists.txt  movable.hpp  move.hpp  tests.cpp  vec2.hpp
commands/rotate/: CMakeLists.txt  angle.cpp  rotable.hpp  rotate.hpp  tests.cpp
homework1/: CMakeLists.txt  main.cpp  quadratic-equation.cpp  quadratic-equation.hpp
homework1/tests/: CMakeLists.txt  tests.cpp
homework2/: CMakeLists.txt  angle.hpp  movable.hpp  move.hpp  rotable.hpp  rotate.hpp  tests.cpp
move/: CMakeLists.txt
move/move/: movable.hpp  move.hpp  tests.cpp
move/rotate/: rotate.hpp  tests.cpp
quadratic-equation/: CMakeLists.txt  tests.cpp
